# qupsc

./: .gitignore  .gitmodules  LICENSE
src/: CMakeLists.txt  commondata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkthread.cpp  networkthread.h  newconnectiondialog.cpp  newconnectiondialog.h  newconnectiondialog.ui  nutsocket.cpp  nutsocket.h  nutssocket.cpp  nutssocket.h  qupsc_ru_RU.ts  threadmanager.cpp  threadmanager.h
